[gd_scene load_steps=5 format=3 uid="uid://bq2ulparngppg"]

[ext_resource type="Script" path="res://puzzle_template.gd" id="1_m5pf7"]
[ext_resource type="Script" path="res://BackButton.gd" id="2_84axc"]
[ext_resource type="Script" path="res://PuzzleRoot.gd" id="3_i08un"]
[ext_resource type="Script" path="res://day_4/CardHolder.gd" id="4_b7yoc"]

[node name="PuzzleTemplate" type="Node2D"]
script = ExtResource("1_m5pf7")
dayNumber = 4
partNumber = 1

[node name="BackButton" type="Button" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 177.0
offset_bottom = 51.0
text = "Back to Main Menu"
script = ExtResource("2_84axc")

[node name="PuzzleRoot" type="Node2D" parent="."]
position = Vector2(0, 71)
script = ExtResource("3_i08un")

[node name="CardHolder" type="Node2D" parent="PuzzleRoot"]
position = Vector2(20, 0)
script = ExtResource("4_b7yoc")

[node name="DisplayRoot" type="Control" parent="PuzzleRoot/CardHolder"]
layout_mode = 3
anchors_preset = 0
offset_left = 180.0
offset_top = -51.0
offset_right = 220.0
offset_bottom = -11.0

[node name="TotalLabel" type="Label" parent="PuzzleRoot/CardHolder/DisplayRoot"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 26.0
text = "Total: 0"

[node name="CurrentCardScore" type="Label" parent="PuzzleRoot/CardHolder/DisplayRoot"]
layout_mode = 0
offset_left = 200.0
offset_right = 240.0
offset_bottom = 23.0
text = "Current Card Score: 0"

[connection signal="pressed" from="BackButton" to="BackButton" method="_on_pressed"]
[connection signal="finish_parsing" from="PuzzleRoot" to="PuzzleRoot/CardHolder" method="_on_puzzle_root_finish_parsing"]
